List of features / changes made / release notes, in reverse chronological order.
If not stated, FINUFFT is assumed (up to v 1.3 CUFINUFFT indicated separately).

V 2.3.0 (expected Dec 2023)

* finally thread-safety for all fftw cases, kill FFTW_PLAN_SAFE (PR 354)
* python interface fixing edge cases (singleton dims, #395). Awaiting #367
* fix issue where repeated calls of finufft_makeplan with different numbers of
  requested threads would always use the first requested number of threads

V 2.2.0 (08/30/23) (untagged; aka 2.2.0.dev0, a name used to bump python pkg)

* MERGE OF CUFINUFFT (GPU CODE) INTO FINUFFT SOURCE TREE:
  - combined cmake build system via FINUFFT_USE_CUDA flag
  - python wrapper for GPU code included
  - GPU documentation (improving on cufinufft) added {install,c,python)_gpu.rst
  - CI includes GPU smoke test (jenkins)
  - common spread_opts.h header; other code not yet made common.
  - GPU interface has been changed (broken) to match finufft
  - cufinufft repo is left in legacy state at v1.3.
  [coding leads on this: Robert Blackwell and Joakim Anden]
* cmake build structure (thanks: Wenda Zhou, Marco Barbone, Libin Lu)
  - Note: the plan is to make the makefiles/make.inc.* obsolete.
* interp (for type 2) accel by up to 60% in high-acc 2D/3D, by FMA/SIMD-friendly
  rearranging of loops, by Martin Reinecke, PR #292.
* remove inv array in binsort; speeds up multithreaded case by up to 50%
  but no effect on single-threaded. Martin Reinecke, PR #291.
* Fix memleak in repeated setpts (Issue #269); thanks Aaron Shih & Libin Lu.
* Fortran90 example via a new FINUFFT fortran module, thanks Reinhard Neder.
* Better Python interface type checking (PR #237).
* made the C++ plan object (finufft_plan_s) private; only opaque pointer
  remains public, as should be (PR #233). Allows plan to have C++ constructs.
* fixed single-thread (OMP=OFF) build which failed due to fftw_defs.h/defs.h
