@@ -4,7 +4,8 @@ If not stated, FINUFFT is assumed (up to v 1.3 CUFINUFFT indicated separately).
 V 2.3.0 (expected Dec 2023)
 
 * finally thread-safety for all fftw cases, kill FFTW_PLAN_SAFE (PR 354)
-* python interface fixing edge cases (singleton dims, #395). Awaiting #367
+* python interface fixing edge cases (singleton dims, #359).
+* python interface supports batch dimension of length 1(issue #367).
 * fix issue where repeated calls of finufft_makeplan with different numbers of
   requested threads would always use the first requested number of threads
 
